# ReportIconvError

./: README.md  build-arm64.sh  build-x86.sh  main.c  meson.build
.github/workflows/: show-error.yml
config/: ios-arm64.ini  ios-x86_64.ini
